# hsm-alt

./: .gitignore  Makefile  go.mod  go.sum
api/: go.mod  mpc.proto
cmd/cli/: main.go
cmd/mpc-cli/: main.go
cmd/mpc-enclave/: Cargo.toml
cmd/mpc-enclave/src/: crypto.rs  enclave.rs  ipc.rs  lib.rs  main.rs
cmd/mpc-node/: main.go
cmd/operator/: main.go
cmd/wallet-service/: main.go
configs/docker/: Dockerfile.enclave  Dockerfile.node  docker-compose.yml
configs/k8s/manifests/: namespace.yaml  node-statefulset.yaml  operator-deployment.yaml  service.yaml
configs/k8s/operator/: rbac.yaml
configs/mpc/: node.yaml.example
frost-test/: Cargo.toml
frost-test/src/: main.rs
pkg/blockchain/ethereum/: address.go  rpc.go  tx.go
pkg/blockchain/solana/: rpc.go  tx.go
pkg/config/: loader.go
pkg/enclave/: client.go
pkg/mpc/node/: dkg_orchestrator.go  node.go  server.go  share_store.go  sign_orchestrator.go
pkg/mpc/protocol/: dkg.go  signing.go
pkg/policy/: engine.go
pkg/signer/: ecdsa.go  mpc.go  mpc_solana.go  signer.go  solana.go
pkg/transaction/: service.go
pkg/wallet/: intent.go  keystore.go  store.go  wallet.go
ui/dashboard/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
ui/dashboard/app/: globals.css  layout.tsx  page.tsx
ui/dashboard/app/fees/: page.tsx
ui/dashboard/app/intents/: page.tsx
ui/dashboard/app/intents/[id]/: page.tsx
ui/dashboard/app/wallet/: page.tsx
ui/dashboard/app/wallet/[id]/: page.tsx
ui/dashboard/components/: providers.tsx  sidebar.tsx
ui/dashboard/lib/: api.ts  utils.ts
