[package]
name = "mpc-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-ed25519 = { version = "3.0.0-rc.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"

[features]
default = ["simulation"]
simulation = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]