[package]
name = "mpc-enclave"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
thiserror = "1.0"

# FROST threshold signatures
frost-ed25519 = { version = "3.0.0-rc.0", features = ["serde", "serialization"] }
frost-core = { version = "3.0.0-rc.0", features = ["serde", "serialization"] }
curve25519-dalek = { version = "4.1", features = ["serde"] }

# HTTP Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
